--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Alexis Balzano",
   "license": "MIT",
   "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
