--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "electron-reload": "^2.0.0-alpha.1",
+    "electron-store": "^10.0.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
